Add Golynski et al

--- a/paper.tex
+++ b/paper.tex
@@ -117,7 +117,7 @@ A great amount of works in Compressed Data Structures revolve around bitvectors,
     \item $select_1(B,i)$ returns the position in $1..n$ where the $i$th 1 occurs. Therefore, $rank_1(B,select_1(B,i)) = i$.
 \end{itemize}
 
-These operations can be supported in constant time with $o(n)$ extra bits \cite{Jac89,Mun96}, although several techniques exist for compressing bitvectors \cite{Raman:2002:SID:545381.545411,okanohara2007practical}. \marginpar{WTF is wrong with \cite{Golynski2007}?? I cannot find it, paywalls everywhere. Someone (Fari?) cited it before, but I am not going to cite something I cannot read...}
+These operations can be supported in constant time with $o(n)$ extra bits \cite{Jac89,Mun96}, although several techniques exist for compressing bitvectors \cite{Raman:2002:SID:545381.545411,okanohara2007practical,Golynski2007}.
 
 \subsubsection{Compressed Suffix Array (CSA)}
 \label{sec:csa}
